@@ -23,3 +23,4 @@ Prince Kumar Dubey <prince.dubey@samsung.com> <prince.dubey@gmail.com>
 David Seikel <onefang at gmail.com>
 Mikael Sans <sans.mikael@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
+Rajeev Ranjan (Rajeev) <rajeev.r@samsung.com> <rajeev.jnnce@gmail.com>
